# Particle_in_a_Box

./: .gitattributes  .gitignore  Anit_Symmetric_Boundaries.py  Backend.py  Boundaries.py  CITATION.cff  Energy_spectra_variable_bounds.ipynb  LICENSE  Neumann_Boundaries.py  README.md  Special_States.py  Symmetric_Boundaries.py  Symmetric_Case.py  Uncertainty_Rel.ipynb  default_plot.py  gamma_minus_is_minus_gamma_plus.py  miniGUIPlot.py  new_testing_env.ipynb  nummericalResources.py  open_project.bat  particle_in_a_box.py  plots.ipynb  produce_me_a_gif.py  produce_me_another_anim.py  python_investigations.ipynb  setup.cfg  setup.py  state_plot.py  temp_cas_notebook.ipynb  test.py  test_testing.ipynb  testing.py  testing_new_case.ipynb
Animations/: produce_me_a_gif.py  produce_me_another_anim.py
Deprecated/: Momentum_Distributions.ipynb  Momentum_Distributions_interfaceOnly.ipynb  createMomentumAnimation.py  test_testing.ipynb  testing_backup_0429.py
Notebooks/: additional_plots.ipynb  demo.ipynb  demo.md  new_testing_env.ipynb  plots.ipynb  python_investigations.ipynb  test.ipynb  update_plot_test.ipynb
Save_Plots/: plots.py
Tests/: update_plot_test.py
hooks/: pre-commit
img/: demo.py  simple_demo.py
pib_lib/: Boundaries.py  Special_States.py  default_plot.py  particle_in_a_box.py  update_plot.py
src/pib_lib/: Boundaries.py  Special_States.py  particle_in_a_box.py  update_plot.py
