[metadata]
name = pib_lib
version = 0.3.1
author = Valentin Wyss
author_email = valentin.wyss@bluewin.ch
description = simple python library to compute the time evolution a quantum mechanical particle in a one-dimensional box
long_description = file: README.md
long_description_content_type = text/markdown
licence = MIT licence
licence_files = LICENCE*
classifiers = Programming Language :: Python :: 3
keywords = 
    one-dimensional quantum mechanics
    particle in a box
    matplotlib        
project_urls = 
    Theory = http://www.wiese.itp.unibe.ch/theses/wyss_bachelor.pdf

[options]
package_dir =
    = src
packages = pib_lib
python_requires = >=3.8
install_requires = 
    numpy
    scipy
    matplotlib